# TrelloMCP

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/trello_mcp/: __init__.py  __main__.py  server.py  trello_client.py
tests/: __init__.py
